app/javascript/styles/chitter-bright.scss
$ui-base-color: #eee;
$ui-base-lighter-color: #aaa;
$primary-text-color: black;
$ui-primary-color: #333035;
$ui-secondary-color: #617;
$ui-highlight-color: #83c;
$ui-boost-color: #52c336;
$ui-button-inactive-color: #444;

$ui-inverted-background-color: #334;
$ui-inverted-faded-background-color: #404049;
$ui-inverted-foreground-color: #eee;
$ui-inverted-highlight-color: $ui-highlight-color;

@import 'chitter-common.scss';

.drawer__inner {
  background-color: $ui-secondary-color;
  color: $ui-base-lighter-color;

  .navigation-bar {
    color: lighten($ui-primary-color, 50%);
  }
  .navigation-bar strong {
    color: white;
  }
  .navigation-bar__profile-edit,
  .compose__action-bar-dropdown .icon-button {
    color: $ui-inverted-foreground-color;
  }

  .compose__action-bar-dropdown .icon-button {
    transition: background 300ms;
    border-radius: 4px;
  }

  .compose__action-bar-dropdown .icon-button:hover,
  .compose__action-bar-dropdown .icon-button:focus{
    background: rgba(white, 20%);
  }

  .compose__action-bar-dropdown .icon-button:active,
  .compose__action-bar-dropdown .icon-button.active{
    background: rgba(white, 40%);
  }

}

.compose-form .compose-form__buttons-wrapper {
  .character-counter__wrapper .character-counter,
  .icon-button,
  .text-icon-button {
    color: white;
    &.active {
      color: $ui-primary-color;
      background: white;
    }
  }
}

.list-editor .drawer__inner {
  background-color: $ui-base-color;
}

.compose-form .compose-form__modifiers .compose-form__upload-description textarea,
.compose-form .compose-form__modifiers .compose-form__upload-description textarea::placeholder,
.compose-form .compose-form__modifiers .compose-form__upload__actions .icon-button,
.compose-form .compose-form__modifiers .compose-form__upload__actions .icon-button:hover,
.compose-form .compose-form__modifiers .compose-form__upload__actions .icon-button:focus,
.compose-form .compose-form__modifiers .compose-form__upload__actions .icon-button:active{
  color: $ui-inverted-foreground-color;
}

.compose-form .autosuggest-textarea__textarea,
.compose-form .spoiler-input__input {
  color: $primary-text-color;
}

.compose-form .compose-form__buttons-wrapper {
  background-color: $ui-secondary-color;
}

.reply-indicator {
	background-color: $ui-inverted-background-color;
}

.compose-form__publish-button-wrapper button {
  background-color: $ui-secondary-color;
  &:focus, &:hover, &:active {
    background-color: $ui-highlight-color;
  }
  &[disabled] {
    background-color: $ui-button-inactive-color;
  }
}

.compose-form .compose-form__modifiers .compose-form__upload-description input {
  color: white;
  &::placeholder {
    color: white;
  }
}


.privacy-dropdown__dropdown {
  background-color: $ui-secondary-color;
}

.privacy-dropdown__option {
  color: $ui-inverted-foreground-color;
}

.privacy-dropdown__option.active,
.privacy-dropdown__option:hover,
.privacy-dropdown__option.active:hover {
  color: $ui-primary-color;
  background-color: white;
}

.privacy-dropdown__option__content,
.privacy-dropdown__option:hover .privacy-dropdown__option__content,
.privacy-dropdown__option.active .privacy-dropdown__option__content,
.privacy-dropdown__option:hover .privacy-dropdown__option__content strong,
.privacy-dropdown__option.active .privacy-dropdown__option__content strong{
  color: inherit;
}

.compose-form__buttons .icon-button,
.compose-form__buttons .text-icon-button {
  &:hover, &:active, &:focus {
    color: rgba(255,255,255, 0.7)
  }
  &.active, &.active.disabled {
    color: black;
  }
}

.compose-form .compose-form__warning {
  background: $ui-inverted-background-color;
}

.emoji-mart-anchors {
  color: rgba(255,255,255,0.4);
}
.emoji-mart-anchor:hover {
  color: rgba(255,255,255,0.7);
}

.emoji-mart-anchor-selected {
  color: white;
}
.emoji-mart-anchor-bar {
  background-color: white;
}

.emoji-mart-category-label span {
  color: $ui-base-lighter-color;
}

.emoji-mart-search input {
  background: transparent;
  border-color: $ui-primary-color;
  color: $primary-text-color;
}


.column-back-button, .column-header__back-button {
  color: $ui-primary-color;
}

.column > .scrollable {
  background-color: #f0f0f0;
}

.empty-column-indicator, .error-column {
  color: black;
}


.status, .account {
  border-bottom-color: rgba(0,0,0,0.3);
}

.activity-stream .status.light .status__content a.status__content__spoiler-link,
.activity-stream .detailed_status.light .status__content a.status__content__spoiler-link,
.status__content .status__content__spoiler-link,
.reply-indicator__content .status__content__spoiler-link {
  color: white;
  background-color: #666;
  &:hover, &:active, &:focus {
    background-color: #999;
  }
}

.icon-button, .text-icon-button {
  &:hover, &:active, &:focus {
    color: #444;
  }
  &.active {
    color: $ui-primary-color;
  }
  &.disabled {
    color: #ddd;
  }
  &.overlayed {
    background-color: rgba(255,255,255,0.7);
    &:hover, &:active, &:focus {
      background-color: rgba(255,255,255,1);
    }
  }
}

.spoiler-button .spoiler-button__overlay__label {
  background-color: rgba(255,255,255,0.7);
  color: $ui-primary-color;
}

.spoiler-button:hover .spoiler-button__overlay__label,
.spoiler-button:active .spoiler-button__overlay__label,
.spoiler-button:focus .spoiler-button__overlay__label
{
  background-color: rgba(255,255,255,1);
  color: $ui-primary-color;
  text-decoration: underline;
}

.getting-started a {
  color: #222;
}


.onboarding-modal__paginator .onboarding-modal__nav,
.error-modal__footer .error-modal__nav,
.confirmation-modal__action-bar .confirmation-modal__cancel-button {
  &, &:hover, &:focus, &:active {
    color: rgba(255,255,255,0.7);
  }
}
.onboarding-modal__dot {
  background: rgba(255,255,255,0.7);
}

.onboarding-modal__dot.active {
  background: white;
}

.report-modal__container {
  background-color: rgba(0,0,0,0.5);
}

.report-modal__container .status__content {
  color: white;
}

.report-modal__container .status__content a {
  color: desaturate(lighten($ui-secondary-color, 50%), 50%);
}

.report-modal__comment .setting-text,
.column-inline-form .setting-text {
  color: $primary-text-color;
}

.report-modal__comment .button {
  color: $ui-inverted-foreground-color;
}

.status-check-box {
  border-bottom-color: rgba(255,255,255,0.3);
}

.activity-stream .status.light .display-name strong,
.activity-stream .detailed-status.light .detailed-status__display-name .display-name strong,
.activity-stream .status.light .status__content,
.activity-stream .detailed-status.light .status__content,
.status__content,
.account-card .account__header__content,
.account-card .detailed-status__display-name .display-name strong {
  color: black;
}

::-webkit-scrollbar-track {
  background-color: $ui-base-color;
}

::-webkit-scrollbar-thumb {
  background-color: $ui-base-lighter-color;
}

::-webkit-scrollbar-thumb:hover {
  background-color: darken($ui-base-lighter-color, 15%);
}

.react-toggle:hover {
  transform: scale(1.05);
}

.react-toggle-track,
.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track {
  background-color: rgba(0,0,0,0.3);
  box-shadow: inset 0 0 0 1px rgba(255,255,255,0.3);
}

.react-toggle--checked .react-toggle-track,
.react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track {
  background-color: $ui-primary-color;
}

.getting-started .mascot-credit {
  color: white;
}

.icon-button.horrible-hack {
  content: "yes"
}



.card .card__bio {
  background-color: rgba(255,255,255,0.9);
  mix-blend-mode: luminosity;
}

.card::after {
  mix-blend-mode: color;
  opacity: 0.4;
  background-image: linear-gradient(0deg, $ui-primary-color, transparent);
}

.card .counter.active::after {
  border-bottom-color: black;
}
.card .counter::after {
  border-bottom-color: gray;
}

.accounts-grid .account-grid-card {
  background-color: desaturate($ui-secondary-color, 70%);
}

.activity-stream-tabs a {
  color: inherit;
  &:hover, &:active, &:focus {
    color: inherit;
    text-decoration: underline;
  }
  &.active {
    color: white;
    background-color: $ui-primary-color;
  }
}

.search-popout em {
  color: black;
}

.regeneration-indicator,
.regeneration-indicator__label strong
{
  color: desaturate(darken($ui-secondary-color, 10%), 50%);
}

.dropdown-menu__item a:hover,
.dropdown-menu__item a:active,
.dropdown-menu__item a:focus {
  color: $ui-primary-color;
  background: white;
}

.relationship-tag {
  color: white;
}

.account__header__tabs__buttons .icon-button {
  border-color: $ui-base-lighter-color;
}

.status-card {
  border: none;
}

a.status-card, a.status-card.compact,
a.status-card:hover, a.status-card.compact:hover,
.status-card__image, .status-card__content {
  background: $ui-inverted-faded-background-color;
}

a.status-card:hover, a.status-card.compact:hover {
  background: $ui-inverted-background-color;
}

.status-card__title,
.status-card__description,
.status-card__host,
.status-card__actions button,
.status-card__actions a {
  color: $ui-inverted-foreground-color;
}

.poll__chart.leading {
  background: rgba($ui-highlight-color, 0.4);
}

.poll__chart {
  background: rgba(black, 0.15);
}

.poll__text input[type="text"],
.compose-form__poll-wrapper select,
.compose-form__poll-wrapper .button.button-secondary {
  color: black;
  border-color: $ui-primary-color;
}

.poll__footer, .poll__link {
  color: $ui-primary-color;
}

.poll__option input[type="text"] {
  color: $ui-primary-color;
  border-color: $ui-primary-color;
}

.admin-wrapper .sidebar ul .simple-navigation-active-leaf a,
.admin-wrapper .simple_form button,
.admin-wrapper .simple_form .block-button,
.admin-wrapper .button {
  color: $ui-inverted-foreground-color;
}

.account__header__tabs__buttons .logo-button { // why? why is it called logo-button? it doesn't have a logo it's the "follow" button
  color: $ui-inverted-foreground-color;
}

.icon-button.star-icon.active {
  color: #ca8f04;
}

.getting-started__footer p,
.getting-started__footer p a {
  color: inherit;
}

a.column-link--transparent {
  color: $ui-primary-color;
}

